# DeskMaid

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
deskmaid/: __init__.py  ai_engine.py  cli.py  config.py  content_reader.py  interview.py  modes.py  organizer.py  scanner.py  undo.py
